Rename boards and add old examples.
Rename boards for consistency and clarity. These names are reflected in the .uf2 filenames.
Add a new examples-rp2040 directory with examples for the old RP2040 boards (from pimoroni-pico.)
Shore up the CI to include the examples-rp2040 dir into rp2040 builds.

--- a/.github/workflows/micropython.yml
+++ b/.github/workflows/micropython.yml
@@ -14,9 +14,9 @@ jobs:
     strategy:
       matrix:
         include:
-        - name: pico_i75
-        - name: pico_w_i75
-        - name: pico2_w_i75
+        - name: i75_rp2040
+        - name: i75w_rp2040
+        - name: i75w_rp2350
 
     env:
       # MicroPython version will be contained in github.event.release.tag_name for releases
